--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,10 +7,9 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-
+  test:
+    name: "Test on Linux"
     runs-on: ubuntu-latest
-
     steps:
     - name: "checkout project"
       uses: actions/checkout@v4
@@ -24,9 +23,10 @@ jobs:
         prefix: 'v'
       id: janet-ver
     - name: "set prefix"
-      run: echo "PREFIX=$GITHUB_WORKSPACE/.janet" >> $GITHUB_ENV
       shell: bash
+      run: echo "PREFIX=$GITHUB_WORKSPACE/.janet" >> $GITHUB_ENV
     - name: "set paths"
+      shell: bash
       run: |
         echo "$PREFIX/bin" >> $GITHUB_PATH
         echo "JANET_HEADERPATH=$PREFIX/include" >> $GITHUB_ENV
@@ -34,19 +34,21 @@ jobs:
         echo "JANET_LIBPATH=$PREFIX/lib" >> $GITHUB_ENV
         echo "JANET_MANPATH=$PREFIX/man" >> $GITHUB_ENV
         echo "JANET_PATH=$PREFIX" >> $GITHUB_ENV
-      shell: bash
     - name: "make directories"
+      shell: bash
       run: mkdir -p $PREFIX
-      shell: bash
     - name: "download janet"
+      shell: bash
       run: curl -LO https://github.com/janet-lang/janet/releases/download/${{ steps.janet-ver.outputs.tag }}/janet-${{ steps.janet-ver.outputs.tag }}-linux-x64.tar.gz
-      shell: bash
     - name: "extract janet"
+      shell: bash
       run: tar -xzf janet-${{ steps.janet-ver.outputs.tag }}-linux-x64.tar.gz --strip-components=2 -C $PREFIX
-      shell: bash
-    - name: "return to workspace directory"
-      run: cd $GITHUB_WORKSPACE
-      shell: bash
     - name: "run tests"
-      run: 'for f in test/*.janet; do janet "$f" || { rc=$?; break; }; done; (exit ${rc:-0})'
       shell: bash
+      run: 'for f in test/*.janet; do janet "$f" || { rc=$?; break; }; done; (exit ${rc:-0})'
+    - name: "run client unit tests"
+      shell: bash
+      run: ./res/scripts/unit-tests
+    - name: "run client system tests"
+      shell: bash
+      run: ./res/scripts/system-tests
