--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,6 +46,12 @@ jobs:
     - name: "run tests"
       shell: bash
       run: 'for f in test/*.janet; do janet "$f" || { rc=$?; break; }; done; (exit ${rc:-0})'
+    - name: "install neovim"
+      shell: bash
+      run: |
+        curl -LO https://github.com/neovim/neovim/releases/download/stable/nvim.appimage
+        chmod +x nvim.appimage
+        sudo mv nvim.appimage /usr/local/bin/nvim
     - name: "run client unit tests"
       shell: bash
       run: ./res/scripts/unit-tests
