--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,7 +48,10 @@ jobs:
       run: 'for f in test/*.janet; do janet "$f" || { rc=$?; break; }; done; (exit ${rc:-0})'
     - name: "install neovim"
       shell: bash
-      run: sudo apt-get update && sudo apt-get install -y neovim
+      run: |
+        sudo add-apt-repository -y ppa:neovim-ppa/stable
+        sudo apt-get update
+        sudo apt-get install -y neovim
     - name: "run client unit tests"
       shell: bash
       run: ./res/scripts/unit-tests
